<resources>
    <string name="app_name">ConverIt</string>
    <string name="logo">logo</string>
    <string name="title">Convert It.</string>
    <string name="caption">Getting the numbers you need!</string>
    <string name="sub_caption">Access our converters to quickly convert length, volume, area, and more.</string>
    <string name="start">Let\'s Start</string>
    <string name="home">Welcome!</string>
    <string name="home_caption">What do you want to convert today?</string>
    <string name="length">Length</string>
    <string name="volume">Volume</string>
    <string name="mass">Mass</string>
    <string name="area">Area</string>
    <string name="time">Time</string>
    <string name="length_caption">Length conversion calculator for metric and imperial units including Kilometers, Miles, Meters, Feet and Inches</string>
    <string name="on_boarding_img">on_boarding img</string>
    <string name="length_box">length box</string>
    <string name="tape">tape</string>
    <string name="volume_box">volume box</string>
    <string name="mass_box">mass box</string>
    <string name="area_box">temp box</string>
    <string name="time_box">time box</string>
    <string name="nav_bar">nav_Bar</string>
    <string name="calc">Calc</string>
    <string name="home_nav">Home</string>
    <string name="calculator">Calculator</string>
    <string name="back_button">Back_Button</string>
    <string name="length_descp">Length conversion calculator for metric and imperial units including Kilometers, Meters, Feet, Inches and Yard.</string>
    <string name="vol_desc">The volume conversion tool makes converting between the volume units easy.</string>
    <string name="clear_button">clear_button</string>
    <string name="mass_desp">This weight converter tool is the best tool for converting between different weight units.</string>
    <string name="area_desp">This area conversion calculator will help you quickly switch between any units of area, from both metric and imperial systems.</string>
    <string name="time_desp">If you\'ve come here to easily convert between units of time - you\'ve come to the right place; the time unit converter will serve your every need.</string>
    <string name="kilo_label">km\t \t \t \t \tKilometer</string>
    <string name="hint">0</string>
    <string name="sampletext">7x2</string>
    <string name="sampleoutput">14.0</string>
    <string name="number2">2</string>
    <string name="clearcalc">AC</string>
    <string name="sign">+/-</string>
    <string name="percent">%</string>
    <string name="divide">/</string>
    <string name="number7">7</string>
    <string name="number8">8</string>
    <string name="number9">9</string>
    <string name="multiply">x</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="number6">6</string>
    <string name="minus">-</string>
    <string name="number1">1</string>
    <string name="number23">3</string>
    <string name="plus">+</string>
    <string name="number0">0</string>
    <string name="dot">.</string>
    <string name="equals">=</string>

</resources>
