<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculator">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="397dp"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="start"
        android:background="@color/white"
        android:paddingTop="10dp"
        app:elevation="8dp"
        app:itemIconSize="30sp"
        app:itemIconTint="@drawable/item_selector"
        app:itemRippleColor="@color/transparent"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav" />


    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="16dp"
        android:background="@color/transparent"
        android:contentDescription="@string/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/inputText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="right"
        android:paddingEnd="30dp"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <TextView
        android:id="@+id/outputText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:gravity="right"
        android:paddingEnd="30dp"
        android:textColor="@color/black"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="@+id/inputText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/inputText"
        app:layout_constraintTop_toBottomOf="@+id/inputText"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <Button
        android:id="@+id/clear"
        android:layout_width="62dp"
        android:layout_height="57dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/calc_button"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/clearcalc"
        android:textColor="@color/other_symbols"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outputText"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/parenthesis"
        android:layout_width="62dp"
        android:layout_height="57dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/calc_button"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/sign"
        android:textColor="@color/other_symbols"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/clear"
        app:layout_constraintTop_toBottomOf="@+id/outputText"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/percent"
        android:layout_width="62dp"
        android:layout_height="57dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/calc_button"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/percent"
        android:textColor="@color/other_symbols"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/parenthesis"
        app:layout_constraintTop_toBottomOf="@+id/outputText"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/divide"
        android:layout_width="62dp"
        android:layout_height="57dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="38dp"
        android:background="@drawable/calc_button"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/divide"
        android:textColor="@color/operation_symbols"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/percent"
        app:layout_constraintTop_toBottomOf="@+id/outputText"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/number7"
        android:layout_width="62dp"
        android:layout_height="57dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="21dp"
        android:background="@drawable/calc_button"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/number7"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/clear"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/clear"
        app:layout_constraintTop_toBottomOf="@+id/clear" />

    <Button
        android:id="@+id/number8"
        android:layout_width="62dp"
        android:layout_height="57dp"
        android:layout_marginTop="21dp"
        android:background="@drawable/calc_button"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/number8"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/parenthesis"
        app:layout_constraintStart_toStartOf="@+id/parenthesis"
        app:layout_constraintTop_toBottomOf="@+id/parenthesis" />

    <Button
        android:id="@+id/number9"
        android:layout_width="62dp"
        android:layout_height="57dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/calc_button"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/number9"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/percent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/percent"
        app:layout_constraintTop_toBottomOf="@+id/percent" />

    <Button
        android:id="@+id/multiply"
        android:layout_width="62dp"
        android:layout_height="57dp"
        android:layout_marginTop="21dp"
        android:background="@drawable/calc_button"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/multiply"
        android:textColor="@color/operation_symbols"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/divide"
        app:layout_constraintStart_toStartOf="@+id/divide"
        app:layout_constraintTop_toBottomOf="@+id/divide"
        tools:ignore="TextContrastCheck" />


    <Button
        android:id="@+id/number4"
        android:layout_width="62dp"
        android:layout_height="57dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="21dp"
        android:background="@drawable/calc_button"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/number4"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/number7"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/number7"
        app:layout_constraintTop_toBottomOf="@+id/number7" />

    <Button
        android:id="@+id/number5"
        android:layout_width="62dp"
        android:layout_height="57dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="21dp"
        android:background="@drawable/calc_button"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/number5"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/number8"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/number8"
        app:layout_constraintTop_toBottomOf="@+id/number8" />

    <Button
        android:id="@+id/number6"
        android:layout_width="62dp"
        android:layout_height="57dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="21dp"
        android:background="@drawable/calc_button"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/number6"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/number9"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/number9"
        app:layout_constraintTop_toBottomOf="@+id/number9" />

    <Button
        android:id="@+id/minus"
        android:layout_width="62dp"
        android:layout_height="57dp"
        android:layout_marginTop="21dp"
        android:background="@drawable/calc_button"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/minus"
        android:textColor="@color/operation_symbols"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/multiply"
        app:layout_constraintStart_toStartOf="@+id/multiply"
        app:layout_constraintTop_toBottomOf="@+id/multiply"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/number1"
        android:layout_width="62dp"
        android:layout_height="57dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="21dp"
        android:background="@drawable/calc_button"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/number1"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/number4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/number4"
        app:layout_constraintTop_toBottomOf="@+id/number4" />

    <Button
        android:id="@+id/number2"
        android:layout_width="62dp"
        android:layout_height="57dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="21dp"
        android:background="@drawable/calc_button"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/number2"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/number5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/number5"
        app:layout_constraintTop_toBottomOf="@+id/number5" />

    <Button
        android:id="@+id/number3"
        android:layout_width="62dp"
        android:layout_height="57dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="21dp"
        android:background="@drawable/calc_button"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/number23"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/number6"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/number6"
        app:layout_constraintTop_toBottomOf="@+id/number6" />

    <Button
        android:id="@+id/plus"
        android:layout_width="62dp"
        android:layout_height="57dp"
        android:layout_marginTop="21dp"
        android:background="@drawable/calc_button"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/plus"
        android:textColor="@color/operation_symbols"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/minus"
        app:layout_constraintStart_toStartOf="@+id/minus"
        app:layout_constraintTop_toBottomOf="@+id/minus"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/delete"
        android:layout_width="62dp"
        android:layout_height="57dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="21dp"
        android:background="@drawable/calc_button"
        android:drawableStart="@drawable/calc_reset"
        android:fontFamily="@font/poppins_medium"
        android:paddingStart="22dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/number1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/number1"
        app:layout_constraintTop_toBottomOf="@+id/number1"
        tools:ignore="RtlSymmetry,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/number0"
        android:layout_width="62dp"
        android:layout_height="57dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="21dp"
        android:background="@drawable/calc_button"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/number0"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/number2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/number2"
        app:layout_constraintTop_toBottomOf="@+id/number2" />

    <Button
        android:id="@+id/dot"
        android:layout_width="62dp"
        android:layout_height="57dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="21dp"
        android:background="@drawable/calc_button"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/dot"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/number3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/number3"
        app:layout_constraintTop_toBottomOf="@+id/number3" />

    <Button
        android:id="@+id/equals"
        android:layout_width="62dp"
        android:layout_height="57dp"
        android:layout_marginTop="21dp"
        android:background="@drawable/calc_button"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/equals"
        android:textColor="@color/operation_symbols"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/plus"
        app:layout_constraintStart_toStartOf="@+id/plus"
        app:layout_constraintTop_toBottomOf="@+id/plus"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>