<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnBoarding">

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="74dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="33sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="104dp"
        android:fontFamily="@font/poppins"
        android:text="@string/caption"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

    <ImageView
        android:id="@+id/obPic"
        android:layout_width="306dp"
        android:layout_height="306dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="34dp"
        android:contentDescription="@string/on_boarding_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caption"
        app:srcCompat="@drawable/on_boarding" />

    <TextView
        android:id="@+id/subCaption"
        android:layout_width="275dp"
        android:layout_height="58dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/sub_caption"
        android:textAlignment="center"
        android:textColor="@color/field_grey_font"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/obPic" />

    <Button
        android:id="@+id/dashboardBtn"
        android:layout_width="273dp"
        android:layout_height="57dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="73dp"
        android:background="@drawable/ripple_effect"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/start"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/subCaption"
        app:layout_constraintStart_toStartOf="@+id/subCaption"
        app:layout_constraintTop_toBottomOf="@+id/subCaption" />
</androidx.constraintlayout.widget.ConstraintLayout>